*** WordPress Plugin Template Changelog ***

= 2.1 =
* 2013-06-27
* New - Adding Grunt.js support (kudos kloon)
* Tweak - Improving general syntax
* Tweak - Making build-plugin.sh more compatible (kudos Natrio42)
* Fix - Markup fix (kudos mrsonord)

= 2.0 =
* 2013-04-07
* New - Refactoring method for loading main class - see main plugin file for changes and explanation
* New - Minifying JS
* New - Adding default CSS & Less files
* New - Adding script and style enqueue functions
* New - Adding shell script to clone template to new folder
* Tweak - Adding further DocBlock comments
* Tweak - Modifying readme.txt to be more generic
* Fix - Fixing image upload settings field to work with more than one field on the same page
* Fix - Fixing column headers for custom post types (kudos ffabiosales)

= 1.1 =
* 2013-02-26
* New - Completely refactoring the settings class
* Tweak - Updating WordPress version compatibility

= 1.0.1 =
* 2013-12-05
* Tweak - Adding DocBlock comments
* Tweak - Slight refactor
* Tweak - Updating WordPress version compatibility

= 1.0 =
* 2012-12-13
* Initial release